# work-daigest

./: .gitignore  README.md  pyproject.toml  shell.nix
.github/workflows/: ci.yaml
fetchers/: github.py  google_calendar.py
week_dAIgest/: bedrock.py  main.py
week_dAIgest/fetchers/: README.md  README.txt  github.py  google_calendar.py
work_daigest/: bedrock.py  main.py  ui.py
work_daigest/fetchers/: github.py  google_calendar.py
