[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "work-daigest"
version = "0.1.0"
description = ""
authors = [
  "Nour El Mawass <nour.elmawass@tweag.io>",
  "Simeon Carstens <simeon.carstens@tweag.io>"
]
readme = "README.md"
packages = [
  { include = "work_daigest" }
]

[tool.poetry.dependencies]
python = "^3.11"
ics = "^0.7.2"
requests = "^2.32.0"
boto3 = "^1.34.37"
botocore = "^1.34.99"
pytz = "^2024.1"
streamlit = "^1.30.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.scripts]
work-daigest = "work_daigest:main.main"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
ruff = "^0.0.290"
fawltydeps = "^0.13.1"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["F", "I", "PD"]

[tool.fawltydeps]
ignore_unused = [
  "jupyter",
  "notebook",
  "black",
  "isort",
  "fawltydeps",
  "mypy",
  "pylint",
  "ruff",
]
